--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "python.pythonPath": "/home/mcutter/git/runmon/.prod/bin/python3.8"
+  "python.pythonPath": "/home/mcutter/git/water/.water/bin/python3"
 }
