--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,15 @@
-ansicolors>=1.1.8
-click>=7.1.2
-watchdog>=1.0.2
+ansicolors==1.1.8
+attrs==20.3.0
+build==0.2.1
+click==7.1.2
+iniconfig==1.1.1
+packaging==20.9
+pep517==0.9.1
+pluggy==0.13.1
+py==1.10.0
+pyparsing==2.4.7
+pytest==6.2.2
+pytest-asyncio==0.14.0
+toml==0.10.2
+watchdog==2.0.0
+water==1.0.0
