--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - master
-      - prerelease 
+      - prerelease
     tags:
       - '**'
   pull_request: {}
@@ -27,7 +27,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip wheel
+          python -m pip install --upgrade pip wheel &&
           pip install -r requirements.txt
 
       - name: Run PyTest
@@ -53,7 +53,7 @@ jobs:
 #       run: |
 #         python -m pip install --upgrade pip wheel
 #         pip install setuptools wheel twine
-    
+
 #     - name: Build and publish
 #       env:
 #         TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
