--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,8 +27,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip wheel &&
-          pip install -r requirements.txt
+          python -m pip install --upgrade pip wheel && pip install -r requirements.txt
 
       - name: Run PyTest
         run: |
