--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 ansicolors==1.1.8
+appdirs==1.4.4
 attrs==20.3.0
 autopep8==1.5.5
 bleach==3.3.0
@@ -8,8 +9,11 @@ cffi==1.14.5
 chardet==4.0.0
 click==7.1.2
 colorama==0.4.4
+coverage==5.4
 cryptography==3.4.4
+distlib==0.3.1
 docutils==0.16
+filelock==3.0.12
 idna==2.10
 iniconfig==1.1.1
 jeepney==0.6.0
@@ -32,8 +36,10 @@ rfc3986==1.4.0
 SecretStorage==3.3.1
 six==1.15.0
 toml==0.10.2
+tox==3.21.4
 tqdm==4.56.2
 twine==3.3.0
 urllib3==1.26.3
+virtualenv==20.4.2
 watchdog==2.0.0
 webencodings==0.5.1
