Adds deploy step

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,7 @@ jobs:
           - name: "ubuntu-py39"
             python: "3.9"
             os: ubuntu-latest
-            tox_env: "py39-xdist"
+            tox_env: "py39"
     steps:
     - uses: actions/checkout@v2
       with:
@@ -53,3 +53,38 @@ jobs:
 
     - name: Test with coverage
       run: "tox -e ${{ matrix.tox_env }}"
+
+
+  deploy:
+    if: github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags') && github.repository == 'matutter/water'
+    runs-on: ubuntu-latest
+    timeout-minutes: 30
+    needs: [build]
+    steps:
+    - uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: "3.8"
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip wheel
+        pip install -r requirements.txt
+
+    - name: Build
+      run: |
+        python -m build
+
+    - name: Twine Check
+      run: |
+        twine check dist/*
+        ls -lh dist
+
+    - name: Upload to PyPi
+      run: |
+        twine upload dist/*
+      env:
+        TWINE_USERNAME: __token__
+        TWINE_PASSWORD: ${{ secrets.access_token }}
