--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,37 @@ on:
   pull_request: {}
 
 jobs:
-  test-linux:
+  build:
+    runs-on: ubuntu-latest
+    timeout-minutes: 30
+    steps:
+
+    - uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
+
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: "3.8"
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip wheel
+        pip install -r requirements.txt
+
+    - name: Build
+      run: |
+        python -m build
+
+    - name: Store dist artifacts
+      uses: actions/upload-artifact@v2
+      with:
+        name: pypi_files
+        path: dist
+
+  test:
+    needs: [build]
     name: test py${{ matrix.os }} on linux
     runs-on: ${{ matrix.os }}
     strategy:
@@ -57,9 +87,9 @@ jobs:
 
   deploy:
     if: github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags') && github.repository == 'matutter/water'
+    needs: [build, test]
     runs-on: ubuntu-latest
     timeout-minutes: 30
-    needs: [build]
     steps:
     - uses: actions/checkout@v2
       with:
@@ -68,14 +98,17 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: "3.8"
+
+    - name: Download disk artifacts
+        uses: actions/download-artifact@v2
+        with:
+          name: pypi_files
+          path: dist
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip wheel
-        pip install -r requirements.txt
-
-    - name: Build
-      run: |
-        python -m build
+        pip install twine
 
     - name: Twine Check
       run: |
