--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -84,10 +84,33 @@ jobs:
     - name: Test with coverage
       run: "tox -e ${{ matrix.tox_env }}"
 
+  coverage:
+    needs: [build]
+    name: Coverage on linux
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
+
+    - name: Set up Python 3.8
+      uses: actions/setup-python@v2
+      with:
+        python-version: "3.8"
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip wheel
+        pip install -r requirements.txt
+
+    - name: Test with coverage
+      run: |
+        pytest --coverage
+        coverage report
 
   deploy:
     if: github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags') && github.repository == 'matutter/water'
-    needs: [build, test]
+    needs: [build, test, coverage]
     runs-on: ubuntu-latest
     timeout-minutes: 30
     steps:
