--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,9 @@
 [tox]
-envlist = py36,py37,py38,py39
+envlist = py36,py37,py38,py39,coverage
 
 [testenv]
 deps=
     pytest
     -rrequirements.txt
 commands =
-  pytest --coverage
-  coverage report
-
+  pytest
