--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -67,6 +67,10 @@ jobs:
             python: "3.9"
             os: ubuntu-latest
             tox_env: "py39"
+          - name: "ubuntu-py39"
+            python: "3.10"
+            os: ubuntu-latest
+            tox_env: "py310"
     steps:
     - uses: actions/checkout@v2
       with:
