--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,19 @@ on:
   pull_request: {}
 
 jobs:
+  env-check:
+    environment: pypi
+    runs-on: ubuntu-latest
+    timeout-minutes: 30
+    steps:
+
+    - run: |
+        echo $SECRET1 | wc
+        echo $SECRET2 | wc
+      env:
+        SECRET1: ${{ secrets.PYPY_TOKEN }}
+        SECRET2: __token__
+
   build:
     runs-on: ubuntu-latest
     timeout-minutes: 30
@@ -126,7 +139,6 @@ jobs:
     needs: [build, test, coverage]
     runs-on: ubuntu-latest
     timeout-minutes: 30
-    environment: pypi
     steps:
     - uses: actions/checkout@v2
       with:
