Fixes py36 compat for forward ref

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -134,8 +134,7 @@ jobs:
 
     - name: Test with coverage
       run: |
-        pytest --coverage
-        coverage report
+        pytest --cov=foremon
 
   deploy:
     if: github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags') && github.repository == 'matutter/water'
