--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,6 @@ ansicolors==1.1.8
 autopep8==1.5.5
 build==0.2.1
 click==7.1.2
-coverage==5.4
 pytest-asyncio==0.14.0
 pytest==6.2.2
 tox==3.21.4
@@ -11,3 +10,4 @@ watchdog==1.0.2
 toml==0.10.2
 pydantic==1.7.3
 pytest-mock==3.5.1
+pytest-cov==2.11.1
