--- a/config/sanity-check.toml
+++ b/config/sanity-check.toml
@@ -5,10 +5,11 @@
 
     [tool.foremon.test1]
     patterns = ["*TEST1"]
-    paths = ["tests/input"]
+    # TEMPDIR is set in the tests/expect/docker.sh script
+    paths = ["$TEMPDIR", "tests/input"]
     scripts = [ "echo trigger-1"]
 
     [tool.foremon.test2]
     patterns = ["*TEST2"]
-    paths = ["tests/input"]
+    paths = ["$TEMPDIR", "tests/input"]
     scripts = [ "echo trigger-2"]
